--- a/app/src/main/res/layout/activity_items_disp.xml
+++ b/app/src/main/res/layout/activity_items_disp.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
-            android:title="Store"
+            android:title="Details"
             android:titleTextColor="#4A4A4A" />
 
         <ScrollView
