--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,14 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="300dp"
-        android:src="@drawable/eecomedit"/>
-    <ImageView
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="220dp"
+        android:background="@android:color/darker_gray"/>
+    <ImageButton
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="@drawable/cart"
+        android:id="@+id/profile"
+        android:background="@drawable/profilelogo"
         android:layout_margin="50dp"/>
 
 </RelativeLayout>
