--- a/app/src/main/res/layout/display_card.xml
+++ b/app/src/main/res/layout/display_card.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp">
     <LinearLayout
         android:layout_width="wrap_content"
         android:orientation="vertical"
@@ -11,19 +12,27 @@
         <ImageView
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:background="@drawable/gicon"/>
+            android:background="@drawable/mobile"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:text="Item name"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="Price"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:text="Item category"/>
         <RatingBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             style="@style/Widget.AppCompat.RatingBar.Small"/>
     </LinearLayout>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
