--- a/app/src/main/res/layout/offer_card.xml
+++ b/app/src/main/res/layout/offer_card.xml
@@ -1,29 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:padding="0dp"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    app:cardCornerRadius="10dp"
+    android:elevation="4dp">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_gravity="center"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        card_view:cardCornerRadius="4dp">
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
         <ImageView
             android:id="@+id/pic"
-            android:layout_height="100dp"
-            android:layout_width="match_parent"
-            android:src="@drawable/gicon"/>
+            android:layout_gravity="center"
+            android:layout_height="90dp"
+            android:layout_margin="10dp"
+            android:layout_width="90dp"
+            android:src="@drawable/offer"/>
         <TextView
             android:id="@+id/info_text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </androidx.cardview.widget.CardView>
+            android:text="sample"
+            android:layout_margin="5dp"
+            android:textColor="@android:color/black"
 
-</LinearLayout>
+            android:layout_gravity="center"
+            android:gravity="center"
+
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
